--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,324 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-image: url(./assets/mobile/bg-image-daytime.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
+  align-items: right;
+}
+.top-part {
+  padding: 32px 26px 40px 26px;
+}
+.quote-div {
+  display: flex;
+  gap: 17px;
+}
+.quote {
+  color: #fff;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 183.333% */
+}
+.refresh {
+  width: 16.667px;
+  height: 16.667px;
+}
+h4 {
+  color: #fff;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px; /* 183.333% */
+  margin-top: 8px;
+}
+.time-div {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.time-button {
+  margin-top: 227px;
+}
+.morning-evening {
+  display: flex;
+  gap: 16px;
+}
+.greeting {
+  color: #fff;
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 25px; /* 166.667% */
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+.clock-div {
+  position: relative;
+}
+h1 {
+  color: #fff;
+  font-family: Inter;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100px; /* 100% */
+  letter-spacing: -2.5px;
+}
+.BST {
+  color: #fff;
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 28px; /* 186.667% */
+  text-transform: uppercase;
+  position: absolute;
+  top: 65px;
+  left: 225px;
+}
+.place {
+  color: #fff;
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 186.667% */
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+button {
+  width: 115px;
+  height: 39px;
+  border-radius: 28px;
+  background: #fff;
+  border: none;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 17px 3px;
+  margin-top: 48px;
+}
+.circle {
+  border-radius: 32px;
+  padding: 5px;
+  background: #303030;
+}
+.button-text {
+  color: #000;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 14px; /* 116.667% */
+  letter-spacing: 3.75px;
+  text-transform: uppercase;
+  opacity: 0.5;
+  margin-left: 13px;
+}
+.information-div {
+  height: 256px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  background: rgba(255, 255, 255, 0.75);
+  backdrop-filter: blur(20.387113571166992px);
+  padding: 48px 26px;
+  display: none;
+}
+.information-top {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.information {
+  display: flex;
+  justify-content: space-between;
+}
+.name {
+  color: #303030;
+  font-family: Inter;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 280% */
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.data {
+  color: #303030;
+  text-align: right;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+hr {
+  display: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 768px) {
+  body {
+    background-image: url(./assets/tablet/bg-image-daytime.jpg);
   }
-  to {
-    transform: rotate(360deg);
+  .top-part {
+    padding: 80px 131px 64px 64px;
+  }
+  .quote {
+    font-size: 18px;
+    line-height: 28px;
+  }
+  h4 {
+    font-size: 18px;
+    line-height: 28px;
+    margin-top: 13px;
+  }
+  .time-button {
+    margin-top: 388px;
+  }
+  .greeting {
+    font-size: 18px;
+    line-height: 28px; /* 166.667% */
+    letter-spacing: 3.6px;
+  }
+  h1 {
+    color: #fff;
+    font-family: Inter;
+    font-size: 175px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 174px; /* 100% */
+    letter-spacing: -4.375px;
+  }
+  .BST {
+    font-size: 32px;
+    top: 125px;
+    left: 390px;
+  }
+  .place {
+    font-size: 18px;
+    letter-spacing: 3.6px;
+  }
+  button {
+    width: 146px;
+    height: 56px;
+    padding: 8px 9px;
+    margin-top: 80px;
+  }
+  .circle {
+    padding: 10px;
+  }
+  .button-text {
+    font-size: 16px;
+    line-height: 28px; /* 116.667% */
+    letter-spacing: 5px;
+  }
+  .information-div {
+    height: 440px;
+    gap: 81px;
+    flex-direction: row;
+    justify-content: center;
+    padding: 119px 64px;
+    display: none;
+  }
+  .information-top {
+    gap: 49px;
+  }
+  .information {
+    flex-direction: column;
+    justify-content: right;
+  }
+  .name {
+    font-size: 13px;
+    letter-spacing: 2.6px;
+  }
+  .data {
+    text-align: left;
+    font-size: 40px;
+    line-height: normal;
+  }
+  hr {
+    display: none;
+  }
+}
+@media screen and (min-width: 1440px) {
+  body {
+    background-image: url(./assets/desktop/bg-image-daytime.jpg);
+  }
+  .top-part {
+    padding: 56px 165px 98px 165px;
+  }
+  .head {
+    padding-right: 540px;
+  }
+  .time-button {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 233px;
+  }
+  .morning-evening {
+    display: flex;
+    gap: 16px;
+  }
+  .greeting {
+    font-size: 20px;
+    line-height: 28px; /* 140% */
+    letter-spacing: 4px;
+  }
+  h1 {
+    font-size: 200px;
+    line-height: 200px;
+    letter-spacing: -5px;
+  }
+  .BST {
+    font-size: 40px;
+    top: 145px;
+    left: 450px;
+  }
+  .place {
+    font-size: 24px;
+    letter-spacing: 4.8px;
+  }
+  button{
+    margin-top: 225px;
+  }
+  .information-div {
+    height: 400px;
+    gap: 16px;
+    padding: 75px 165px;
+    gap: 148px;
+    display: none;
+  }
+  .information-top {
+    gap: 16px;
+  }
+  .information {
+    gap: 9px;
+  }
+  .name {
+    font-size: 15px; /* 186.667% */
+    letter-spacing: 3px;
+  }
+  .data {
+    font-size: 56px;
+  }
+  hr {
+    display: inline;
   }
 }
