--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,17 @@
 }
 body {
   background-image: url(./assets/mobile/bg-image-daytime.jpg);
+  height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .App {
-  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
@@ -220,6 +224,7 @@ hr {
     height: 56px;
     padding: 8px 9px;
     margin-top: 80px;
+    margin-bottom: 64px;
   }
   .circle {
     padding: 10px;
@@ -262,7 +267,7 @@ hr {
     background-image: url(./assets/desktop/bg-image-daytime.jpg);
   }
   .top-part {
-    padding: 56px 165px 98px 165px;
+    padding: 56px 165px 0px 165px;
   }
   .head {
     padding-right: 540px;
