--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.night {
+  background-image: url(./assets/mobile/bg-image-nighttime.jpg);
+}
 .App {
   position: fixed;
   top: 0;
@@ -94,7 +97,7 @@ h1 {
   text-transform: uppercase;
   position: absolute;
   top: 65px;
-  left: 225px;
+  left: 270px;
 }
 .place {
   color: #fff;
@@ -143,7 +146,14 @@ button {
   background: rgba(255, 255, 255, 0.75);
   backdrop-filter: blur(20.387113571166992px);
   padding: 48px 26px;
-  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.night2 {
+  background: rgba(0, 0, 0, 0.75);
+  backdrop-filter: blur(20.387113571166992px);
 }
 .information-top {
   display: flex;
@@ -173,13 +183,25 @@ button {
   font-weight: 700;
   line-height: normal;
 }
+.night-text{
+  color: #fff;
+}
 hr {
   display: none;
 }
-
+.arrow {
+  height: 30px;
+  width: 30px;
+}
+span {
+  display: none;
+}
 @media screen and (min-width: 768px) {
   body {
     background-image: url(./assets/tablet/bg-image-daytime.jpg);
+  }
+  .night {
+    background-image: url(./assets/tablet/bg-image-nighttime.jpg);
   }
   .top-part {
     padding: 80px 131px 64px 64px;
@@ -201,6 +223,9 @@ hr {
     line-height: 28px; /* 166.667% */
     letter-spacing: 3.6px;
   }
+  span {
+    display: inline;
+  }
   h1 {
     color: #fff;
     font-family: Inter;
@@ -213,7 +238,7 @@ hr {
   .BST {
     font-size: 32px;
     top: 125px;
-    left: 390px;
+    left: 470px;
   }
   .place {
     font-size: 18px;
@@ -240,7 +265,7 @@ hr {
     flex-direction: row;
     justify-content: center;
     padding: 119px 64px;
-    display: none;
+    position: unset;
   }
   .information-top {
     gap: 49px;
@@ -261,10 +286,17 @@ hr {
   hr {
     display: none;
   }
+  .arrow {
+    height: 40px;
+    width: 40px;
+  }
 }
 @media screen and (min-width: 1440px) {
   body {
     background-image: url(./assets/desktop/bg-image-daytime.jpg);
+  }
+  .night {
+    background-image: url(./assets/desktop/bg-image-nighttime.jpg);
   }
   .top-part {
     padding: 56px 165px 0px 165px;
@@ -294,13 +326,13 @@ hr {
   .BST {
     font-size: 40px;
     top: 145px;
-    left: 450px;
+    left: 500px;
   }
   .place {
     font-size: 24px;
     letter-spacing: 4.8px;
   }
-  button{
+  button {
     margin-top: 225px;
   }
   .information-div {
@@ -308,7 +340,6 @@ hr {
     gap: 16px;
     padding: 75px 165px;
     gap: 148px;
-    display: none;
   }
   .information-top {
     gap: 16px;
